# src/routes/auth.js
@@ -1,8 +1,14 @@
 import { Router } from 'express';
 import { validateBody } from '../middlewares/validateBody.js';
-import { loginUserSchema, registerUserSchema } from '../validation/auth.js';
 import {
+  loginUserSchema,
+  loginWithGoogleOAuthSchema,
+  registerUserSchema,
+} from '../validation/auth.js';
+import {
+  getGoogleOAuthUrlController,
   loginUserController,
+  loginWithGoogleController,
   logoutUserController,
   refreshUserSessionController,
   registerUserController,
@@ -17,6 +23,12 @@ authRouter.post(
   registerUserController,
 );
 authRouter.post('/login', validateBody(loginUserSchema), loginUserController);
+authRouter.get('/get-oauth-url', getGoogleOAuthUrlController);
+authRouter.post(
+  '/confirm-google-auth',
+  validateBody(loginWithGoogleOAuthSchema),
+  loginWithGoogleController,
+);
 authRouter.post('/refresh', authenticate, refreshUserSessionController);
 authRouter.post('/logout', authenticate, logoutUserController);
 
